# datapub

./: .coveragerc  .dockerignore  .env.example  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.postgres  LICENSE.txt  README.md  README.rst  README.txt  database.sql  docker-compose.yml  entrypoint.sh  local.txt  requirements.txt  run_downloader.py  run_extractor.py  setup.cfg  setup.py  sources.json
.github/: FUNDING.yml
.github/scripts/: sync_issues.py
.github/workflows/: sync-issues.yml
data/: sources.csv
docker/postgres/: Dockerfile
docs/: conf.py  index.rst
src/api/: Dockerfile  main.py  requirements.txt
src/datapub/: cli.py  skeleton.py
src/datapub/entities/al_ac/: extractor.py
src/datapub/entities/al_ac/extractors/: diario_extractor.py
src/datapub/entities/al_ce/: diario_extractor.py  extractor.py
src/datapub/entities/al_ce/extractors/: diario_extractor.py
src/datapub/entities/al_go/: extractor.py
src/datapub/entities/al_go/extractors/: diario_extractor.py
src/datapub/entities/al_ms/: extractor.py
src/datapub/entities/al_ms/extractors/: diario_extractor.py
src/datapub/entities/al_pa/: extractor.py
src/datapub/entities/al_pa/extractors/: diario_extractor.py
src/datapub/entities/al_pa/processors/: diario_processor.py
src/datapub/rag/: ingest.py  prune.py  query.py
src/datapub/shared/contracts/: extractor_contract.py
src/datapub/shared/utils/: extractor_base.py  processor_base.py
src/downloaders/: README.md
src/downloaders/al_ac/: downloader.py
src/downloaders/al_ce/: downloader.py
src/downloaders/al_go/: config.py  downloader.py
src/downloaders/al_ms/: config.py  downloader.py
src/downloaders/al_pa/: downloader.py
src/downloaders/ale_pa/: downloader.py
src/downloaders/estado_sp/: config.py  downloader.py
src/extractors/al_ac/: extractor.py
src/extractors/al_ce/: extractor.py
src/extractors/al_go/: extractor.py
src/extractors/al_ms/: extractor.py
src/extractors/al_pa/: extractor.py
src/frontend/: Dockerfile  app.py  requirements.txt
src/processing/: document_processor.py
storage/search_results/: query_20250615T002457Z_518242e67a1feace4a0a2dd265080174.json  query_20250615T002600Z_1e3901470e0881f0c4b54051b460769c.json  query_20250615T002748Z_2022e2abbbf653a923d9db3a90301751.json
tests/: conftest.py  test_skeleton.py
